# Dosshell

./: .gitignore  CMakeLists.txt
examples/: hello.dssh  hello_plugin.cpp  ordnung.dssh  rechner.ini  spiele.ini  zahlenraten.dssh
src/: builtins.cpp  builtins.h  console.cpp  console.h  dosshell_plugin.h  main.cpp  parser.cpp  parser.h  pipeline.cpp  pipeline.h  script.cpp  script.h  shell.cpp  shell.h
